# Batch-Control

./: .gitignore  LICENSE  README.md  TODO.md  main.py  pyproject.toml
data/: __init__.py  batch_control.db  connection_db.py  test_batch_control.db
src/bootstrap/: __init__.py  app_context.py  app_service.py  dashboard_data.py  loader.py
src/dtos/: __init__.py  batch_dto.py  product_dto.py
src/exceptions/: __init__.py  exceptions.py
src/forms/: product_form.py
src/gui/: app.py  app_controller.py  error_window.py  splash_screen.py
src/gui/components/: __init__.py  field_factory.py  homepage.py  menu_button.py  new_product_frame.py  product_frame.py  product_table.py  scrollbar_frame.py  sidebar.py
src/gui/components/batch_frame/: __init__.py  batch_frame.py  batch_table.py  new_batch_frame.py
src/gui/components/factory/: __init__.py  field_factory.py  form_field.py  label_value_table.py
src/gui/components/product_frame/: __init__.py  new_product_frame.py  product_frame.py  product_table.py
src/gui/theme/: __init__.py  theme.py
src/helpers/: __init__.py  helpers.py  image_helper.py
src/interface/: entity.py
src/model/: product.py
src/repository/: product_repository.py
src/service/: product_service.py
test/: connection_test.py  test_product_forms.py  test_product_repository.py
