[project]
name = "batch-control"
version = "0.1.0"
description = "Batch Control GUI"
requires-python = ">=3.10"
dependencies = [
    "customtkinter==5.2.2",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
